--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@ $ ./run.sh Blink  </p>
 <h2>
 <a name="other-infomation" class="anchor" href="#other-infomation"><span class="octicon octicon-link"></span></a>Other Infomation</h2>
 
-<p>Pleas see index.html at doxy_bcmlib_for_java/html/<br>
-(It will create at Installation )  </p>
+<p>Please see index.html at doxy_bcmlib_for_java/html/<br>
+( It will create at Installation )  </p>
       </section>
     </div>
 
@@ -78,6 +78,7 @@ $ ./run.sh Blink  </p>
       </footer>
     </div>
 
+<p>bcmlib_for_java/gh-pages</p>
     
 
   </body>
